# redact

./: .dockerignore  .gitguardian.yaml  .gitignore  MANIFEST.in  README.md  WorkOnwardRead.py  pyproject.toml  requirements.txt  snapcraft.yaml
.github/workflows/: deploy.yml  release.yml
appimage/: AppImageBuilder.yml  workonward-read.desktop
coverup/: annotations.py  canvas_tools.py  compare.py  convert.py  forms.py  main.py  menu.py  pdf_ops.py  search.py  signing.py  state.py  tasks.py  ui.py  workfile.py
coverup/dialogs/: __init__.py  common.py
coverup/handlers/: __init__.py  annotate.py  convert.py  edit.py  file.py  help.py  organize.py  protect.py  review.py  sign.py  view.py
docker/: Dockerfile  run.sh  start.sh
docs/: acrobat-feature-research.md  dev-architecture.md  rename-plan.md  tcl9-migration.md
flatpak/: org.workonward.read.desktop  org.workonward.read.metainfo.xml  org.workonward.read.yml
packaging/: README.md  constraints-macos-x86_64.txt  constraints.txt  coverup.spec  workonward_read.spec
packaging/macos/: CoverUP.icns  README-Open-Me-First.txt  build_app.sh  build_dmg.sh  entitlements.plist  make_icns.sh
packaging/windows/: build_installer.ps1  installer.iss
tests/: conftest.py  fixtures.py  test_annotation_remap.py  test_annotations.py  test_canvas_tools.py  test_compare.py  test_concurrency.py  test_container_annotations.py  test_convert.py  test_convert_integration.py  test_forms.py  test_geometry.py  test_gui_smoke.py  test_journal.py  test_menu_handlers.py  test_ocr.py  test_organize_integration.py  test_pdf_ops.py  test_protect_integration.py  test_purity.py  test_range_parser.py  test_restore_session.py  test_review_integration.py  test_search.py  test_sign_integration.py  test_signing.py  test_smoke.py  test_thumbnails.py  test_workfile.py
web/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  run.sh
web/backend/: _api_e2e_test.py  _engine_test.py  _rotation_test.py  app.py  redaction.py  requirements.txt
web/deploy/: Caddyfile  (+2 more)
workonward_read/: __init__.py  __main__.py  __pyinstaller.py  annotations.py  canvas_tools.py  compare.py  convert.py  document_loader.py  forms.py  geometry.py  i18n.py  image_container.py  main.py  menu.py  ocr.py  page_render.py  pdf_ops.py  pdfium_io.py  search.py  signing.py  state.py  tasks.py  thumbnails.py  translations.py  ui.py  utils.py  workfile.py
(+33 files in other folders)
