[build-system]
requires = ["setuptools>=61.0,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workonward-read"
version = "0.4.2"
description = "WorkOnward Read - a tool for redacting PDF files and images (based on CoverUP)"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Björn Seipel", email = "support@digidigital.de"}
]
maintainers = [
    {name = "Björn Seipel", email = "support@digidigital.de"}
]
keywords = ["pdf", "redaction", "privacy", "image", "editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Office/Business",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "FreeSimpleGUI>=5.0.0",
    "pypdfium2>=4.0.0",
    "Pillow>=10.0.0",
    "fpdf2>=2.7.0",
    "appdirs>=1.4.4",
    "pypdf>=5.1.0",
    "cryptography>=42.0.0",
    "pyhanko>=0.25.0",
    "pdfminer.six>=20240706",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://workonward.org"
Repository = "https://github.com/rahvis/redact"
Issues = "https://github.com/rahvis/redact/issues"
Upstream = "https://github.com/digidigital/CoverUP"

[project.scripts]
workonward-read = "workonward_read.main:main"

[project.gui-scripts]
workonward-read-gui = "workonward_read.main:main"


[project.entry-points.pyinstaller40]
hook-dirs = "workonward_read.__pyinstaller:get_hook_dirs"


[tool.setuptools]
packages = ["workonward_read", "workonward_read.dialogs", "workonward_read.handlers", "workonward_read.pyinstaller_hooks"]

[tool.setuptools.package-data]
workonward_read = ["fonts/*.ttf", "fonts/*.otf", "assets/*.png"]
"workonward_read.pyinstaller_hooks" = ["*.py"]
